--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
          {
             width: 100vw;
             height: 100vh;
-            background-image: url('./hospital.jpg');
-            background-size: 100%;
+            background-image: url('Imagens/fundo.jpg');
+            background-size: 100% 100%;
             background-repeat: no-repeat;
          }  
     </style>
