--- a/pesquisar_doador.html
+++ b/pesquisar_doador.html
@@ -24,7 +24,18 @@
     <div id="seta-voltar">
         <button> <img src="Imagens/left-arrow.svg" alt="left-arrow"></button>
     </div>
+    <div class="pesquisa-fun">
+        <h2>Pesquisar Doador</h2>
+        <input type="text" id="search-input" placeholder="Pesquisar por nome">
+        <button onclick="searchEmployee()">Pesquisar</button>
+    </div>
 
+    <div class="results">
+        <h3>Resultados da Pesquisa:</h3>
+        <ul id="search-results">
+            <!-- Os resultados da pesquisa serão exibidos aqui -->
+        </ul>
+    </div>
     
 </body>
 </html>
