--- a/add_doador.html
+++ b/add_doador.html
@@ -24,7 +24,35 @@
     <div id="seta-voltar">
         <button> <img src="Imagens/left-arrow.svg" alt="left-arrow"></button>
     </div>
+    <div class="container-add-fun">
 
+    <form id="doador-form">
+        <h2>Adicionar Doador</h2>
+
+        <label for="nome">Nome completo:</label>
+        <input type="text" class="input-field" id="nome" name="nome" required>
+
+        <label for="cpf">CPF:</label>
+        <input type="text" class="input-field" id="cpf" name="cpf" required>
+
+        <label for="idade">Idade:</label>
+        <input type="number" id="idade" name="idade" required>
+
+        <label for="tipo-sanguineo">Tipo sanguíneo:</label>
+        <input type="text" id="tipo-sanguineo" name="tipo-sanguineo" required>
     
+        <label for="endereco">Endereço:</label>
+        <input type="text" id="endereco" name="endereco" required>
+
+        <label for="email">E-mail:</label>
+        <input type="email" id="email" name="email" required>
+
+        <label for="telefone">Número de telefone:</label>
+        <input type="tel" id="telefone" name="telefone" required>
+
+        <button type="submit">Adicionar</button>
+    </form>
+    </div>
+
 </body>
 </html>
