--- a/add_doador.html
+++ b/add_doador.html
@@ -1,58 +1,72 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>Adicionar Doador</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-    <style>
-        *{
-            margin: 0;
-            padding: 0;
-            box-sizing: 0;
-         }
-         body
-         {
-            width: 100vw;
-            height: 100vh;
-            background-image: url('Imagens/fundo.jpg');
-            background-size: 100% 100%;
-            background-repeat: no-repeat;
-         }  
-    </style>
+<style>
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: 0;
+    }
+
+    body {
+        width: 100vw;
+        height: 100vh;
+        background-image: url('Imagens/fundo.jpg');
+        background-size: 100% 100%;
+        background-repeat: no-repeat;
+    }
+</style>
+
 <body>
     <div id="seta-voltar">
         <button> <img src="Imagens/left-arrow.svg" alt="left-arrow"></button>
     </div>
     <div class="container-add-fun">
 
-    <form id="doador-form">
-        <h2>Adicionar Doador</h2>
+        <form id="doador-form">
+            <h2>Adicionar Doador</h2>
+            <div id="container-add-fun-inputs">
+                <div>
+                    <label for="nome">Nome completo:</label>
+                    <input type="text" class="input-field" id="nome" name="nome" required>
+                </div>
+                <div>
+                    <label for="cpf">CPF:</label>
+                    <input type="text" class="input-field" id="cpf" name="cpf" required>
+                </div>
 
-        <label for="nome">Nome completo:</label>
-        <input type="text" class="input-field" id="nome" name="nome" required>
+                <div>
+                    <label for="idade">Idade:</label>
+                    <input type="number" id="idade" name="idade" required>
+                </div>
+                <div>
+                    <label for="tipo-sanguineo">Tipo sanguíneo:</label>
+                    <input type="text" id="tipo-sanguineo" name="tipo-sanguineo" required>
+                </div>
+                <div>
+                    <label for="endereco">Endereço:</label>
+                    <input type="text" id="endereco" name="endereco" required>
+                </div>
+                <div>
+                <label for="email">E-mail:</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div>
+                <label for="telefone">Número de telefone:</label>
+                <input type="tel" id="telefone" name="telefone" required>
+            </div>
+            <button type="submit">Adicionar</button>
+            
+            </div>
 
-        <label for="cpf">CPF:</label>
-        <input type="text" class="input-field" id="cpf" name="cpf" required>
-
-        <label for="idade">Idade:</label>
-        <input type="number" id="idade" name="idade" required>
-
-        <label for="tipo-sanguineo">Tipo sanguíneo:</label>
-        <input type="text" id="tipo-sanguineo" name="tipo-sanguineo" required>
-    
-        <label for="endereco">Endereço:</label>
-        <input type="text" id="endereco" name="endereco" required>
-
-        <label for="email">E-mail:</label>
-        <input type="email" id="email" name="email" required>
-
-        <label for="telefone">Número de telefone:</label>
-        <input type="tel" id="telefone" name="telefone" required>
-
-        <button type="submit">Adicionar</button>
-    </form>
+        </form>
     </div>
 
 </body>
+
 </html>
