--- a/add_funcionario.html
+++ b/add_funcionario.html
@@ -1,56 +1,65 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>Adicionar Funcionário</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-    <style>
-        *{
-            margin: 0;
-            padding: 0;
-            box-sizing: 0;
-         }
-         body
-         {
-            width: 100vw;
-            height: 100vh;
-            background-image: url('Imagens/fundo.jpg');
-            background-size: 100% 100%;
-            background-repeat: no-repeat;
-         }  
-    </style>
+<style>
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: 0;
+    }
+
+    body {
+        width: 100vw;
+        height: 100vh;
+        background-image: url('Imagens/fundo.jpg');
+        background-size: 100% 100%;
+        background-repeat: no-repeat;
+    }
+</style>
+
 <body>
     <div id="seta-voltar">
         <button> <img src="Imagens/left-arrow.svg" alt="left-arrow"></button>
     </div>
     <div class="container-add-fun">
         <div>
-        <form id="funcionario-form">
-            <h2>Adicionar Funcionário</h2>
+            <form id="funcionario-form">
+                <h2>Adicionar Funcionário</h2>
 
-            <label for="nome">Nome completo:</label>
-            <input type="text" id="nome" name="nome" required>
+                <div id="container-add-fun-inputs">
+                    <div>
+                        <label for="nome">Nome completo:</label>
+                        <input type="text" id="nome" name="nome" required>
+                    </div>
+                    <div>
+                        <label for="cpf">CPF:</label>
+                        <input type="text" id="cpf" name="cpf" required>
+                    </div>
+                    <div>
+                        <label for="sobrenome">Certificados (separados por virgula):</label>
+                        <input type="text" id="sobrenome" name="sobrenome" required>
+                    </div>
+                    <div>
+                        <label for="endereco">Endereço:</label>
+                        <input type="text" id="endereco" name="endereco" required>
+                    </div>
+                    <div>
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email" required>
+                    </div>
+                    <button type="submit">Adicionar</button>
+                </div>
 
-            <label for="cpf">CPF:</label>
-            <input type="text" id="cpf" name="cpf" required>
+            </form>
+        </div>
+    </div>
 
-            <label for="sobrenome">Certificados (separados por virgula):</label>
-            <input type="text" id="sobrenome" name="sobrenome" required>
 
-            <label for="endereco">Endereço:</label>
-            <input type="text" id="endereco" name="endereco" required>
-
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-            <div> 
-                <button type="submit">Adicionar</button>
-            </div>
-        
-        </form>
-            </div>
-     </div>
-
-    
 </body>
+
 </html>
