--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             width: 100vw;
             height: 100vh;
             background-image: url(./fundo.jpg);
-            background-size: 100%;
+            background-size: 100% 100%;
             background-repeat: no-repeat;
          }  
     </style>
